# MineClone

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake  FindGLM.cmake  FindGTest.cmake  GLAD.cmake
shaders/: lighting.fs  lighting.vs
src/: CMakeLists.txt  camera.hpp  main.cpp  shader.hpp
src/input/: input.cpp  input.hpp
src/shader/: shader.cpp  shader.hpp
src/window/: CMakeLists.txt  window.cpp  window.hpp
tests/: CMakeLists.txt  test.cpp  window_test.cpp
